--- a/learn-certs-pr/azure-data-engineer.yml
+++ b/learn-certs-pr/azure-data-engineer.yml
@@ -2,14 +2,14 @@
 title: 'Microsoft Certified: Azure Data Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure Data Engineer Associate'
-  description: 'Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle.'
+  description: Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle.
 uid: certification.azure-data-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
   Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle
-subTitle: Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle
+subTitle: Azure Data Engineers entwerfen und implementieren das Management, die Überwachung, die Sicherheit und den Datenschutz von Daten unter Verwendung des gesamten Stapels von Azure Data Services, um die Geschäftsanforderungen zu erfülle.
 levels:
 - intermediate
 skills:
@@ -53,6 +53,9 @@ resources:
 - title: Azure-Zertifizierungsplakat
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Azure an.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqh
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure Data Engineer Associate und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4ARli
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
