--- a/learn-certs-pr/azure-for-sap-workloads-specialty.yml
+++ b/learn-certs-pr/azure-for-sap-workloads-specialty.yml
@@ -14,7 +14,7 @@ summary: |-
 
   Architekten oder Ingenieure von Azure für SAP-Workload-Partner arbeiten mit Cloud-Administratoren, Cloud-Datenbankadministratoren und Kunden zusammen, um Lösungen zu implementieren.
 
-  Ein Kandidat für diese Zertifizierungs sollte über umfangreiche Erfahrung und Kenntnisse in SAP-Anwendungen verfügen&#58; SAP HANA, S / 4HANA, SAP NetWeaver, SAP BW / 4HANA, Betriebssystemserver für SAP-Anwendungen und -Datenbanken, Azure-Portal, ARM-Vorlagen, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster Recovery-Design, Datenschutz Konzepte und Vernetzung.
+  Ein Kandidat für diese Zertifizierungs sollte über umfangreiche Erfahrung und Kenntnisse in SAP-Anwendungen verfügen&#58; SAP HANA, S/4HANA, SAP NetWeaver, SAP BW/4HANA, Betriebssystemserver für SAP-Anwendungen und -Datenbanken, Azure-Portal, ARM-Vorlagen, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster Recovery-Design, Datenschutz Konzepte und Vernetzung.
 
   Für diese rolle wird dringend empfohlen, zusätzlich zu den SAP-HANA- und Linux-Zertifizierungen eine Azure Administrator Associate- oder Azure Solutions Architect Expert-Zertifizierung zu erwerben.
 subTitle: Architekten oder Ingenieure von Microsoft Azure für SAP Workloads verfügen über umfassende Erfahrung und Kenntnisse der SAP-Systemlandschaft und der Industriestandards, die für den langfristigen Betrieb einer SAP-Lösung in Azure spezifisch sind.
@@ -46,6 +46,9 @@ resources:
 - title: Azure-Zertifizierungsplakat
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Azure an.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqh
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung in Azure für SAP Workloads Specialty und über die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AOMr
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
