--- a/learn-certs-pr/azure-iot-developer-specialty.yml
+++ b/learn-certs-pr/azure-iot-developer-specialty.yml
@@ -14,12 +14,12 @@ summary: |-
 
   Der Azure IoT-Entwickler arbeitet mit Dateningenieuren und anderen Interessengruppen zusammen, um eine erfolgreiche Geschäftsintegration sicherzustellen.
 
-  Ein Kandidat für Diese Zertifizierung sollte über Erfahrung in der Implementieren von Azure-Services verfügen, die eine IoT-Lösung bilden, einschließlich Datenspeicheroptionen, Datenanalyse, Datenverarbeitung und Plattform-as-a-Service-Optionen. IoT-Entwickler müssen in der Lage sein, die Konfigurationseinstellungen von Azure IoT-Services im Codeteil einer IoT-Lösung zu erkennen und bestimmte IoT-Codierungsaufgaben in mindestens einer von Azure unterstützten Sprache auszuführen, einschließlich C #, Node, C oder Python.
+  Ein Kandidat für Diese Zertifizierung sollte über Erfahrung in der Implementieren von Azure-Services verfügen, die eine IoT-Lösung bilden, einschließlich Datenspeicheroptionen, Datenanalyse, Datenverarbeitung und Plattform-as-a-Service-Optionen. IoT-Entwickler müssen in der Lage sein, die Konfigurationseinstellungen von Azure IoT-Services im Codeteil einer IoT-Lösung zu erkennen und bestimmte IoT-Codierungsaufgaben in mindestens einer von Azure unterstützten Sprache auszuführen, einschließlich C#, Node, C oder Python.
 subTitle: Azure IoT-Entwickler entwickeln Cloud- und Edge-Komponenten einer Azure IoT-Lösung.
 levels:
 - intermediate
 skills:
-- Implementieren der IoT-Lösungsinfrastruktur
+- Implementierung der IoT-Lösungsinfrastruktur
 - Bereitstellung und Verwaltung von Geräten
 - Edge implementieren
 - Daten verarbeiten und verwalten
