--- a/learn-certs-pr/azure-security-engineer.yml
+++ b/learn-certs-pr/azure-security-engineer.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Azure Security Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure Security Engineer Associate'
-  description: 'Die Azure Sicherheitstechniker implementieren Sicherheitskontrollen und Bedrohungsschutz, verwalten Identität und Zugriff und schützen Daten, Anwendungen und Netzwerke in Cloud- und Hybridumgebungen als Teil einer End-to-End-Infrastruktur.'
+  description: Die Azure Sicherheitstechniker implementieren Sicherheitskontrollen und Bedrohungsschutz, verwalten Identität und Zugriff und schützen Daten, Anwendungen und Netzwerke in Cloud- und Hybridumgebungen als Teil einer End-to-End-Infrastruktur.
 uid: certification.azure-security-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
@@ -15,7 +15,7 @@ summary: |-
   Azure Security-Engineers sind häufig Teil eines größeren Teams, das sich mit Cloud-basierten Verwaltungs- und Sicherheitsumgebungen oder Hybridumgebungen als Teil einer kompletten Infrastruktur befasst.
 
   Ein Kandidat für dieses Zertifizierung sollte über fundierte Kenntnisse in Skripten und Automatisierung, ein tiefgreifendes Verständnis der Netzwerk-, Virtualisierungs- und Cloud-N-Tier-Architektur sowie eine umfassende Vertrautheit mit Cloud-Funktionen und -Produkten und -Services für Azure sowie anderen Microsoft-Produkten und -Services verfügen.
-subTitle: Die Azure Sicherheitstechniker implementieren Sicherheitskontrollen und Bedrohungsschutz, verwalten Identität und Zugriff und schützen Daten, Anwendungen und Netzwerke in Cloud- und Hybridumgebungen als Teil einer End-to-End-Infrastruktur
+subTitle: Die Azure Sicherheitstechniker implementieren Sicherheitskontrollen und Bedrohungsschutz, verwalten Identität und Zugriff und schützen Daten, Anwendungen und Netzwerke in Cloud- und Hybridumgebungen als Teil einer End-to-End-Infrastruktur.
 levels:
 - intermediate
 skills:
@@ -49,6 +49,9 @@ resources:
 - title: Azure-Zertifizierungsplakat
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Azure an.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqh
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure Security Engineer Associate und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AJyG
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
