--- a/learn-certs-pr/d365-business-central-functional-consultant-associate.yml
+++ b/learn-certs-pr/d365-business-central-functional-consultant-associate.yml
@@ -1,32 +1,29 @@
 ### YamlMime:Certification
-title: 'Microsoft 365 Certified: Messaging Administrator Associate'
+title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
 metadata:
-  title: 'Microsoft 365 Certified: Messaging Administrator Associate'
-  description: Microsoft 365 Messaging-Administratoren stellen Empfänger, Berechtigungen, E-Mail-Schutz, Nachrichtenfluss und öffentliche Ordner in Hybrid- und Cloud-Unternehmensumgebungen bereit und konfigurieren, verwalten, beheben und überwachen diese.
-uid: certification.m365-messaging-administrator
+  title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
+  description: Diese Zertifizierung wird im September 2020 verfügbar sein. Dynamics 365 Business Central Functional Consultants sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen verantwortlich.
+uid: certification.d365-business-central-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
-  Microsoft 365 Messaging-Administratoren stellen Empfänger, Berechtigungen, E-Mail-Schutz, Nachrichtenfluss und öffentliche Ordner in Hybrid- und Cloud-Unternehmensumgebungen bereit und konfigurieren, verwalten, beheben und überwachen diese.
-subTitle: Microsoft 365 Messaging-Administratoren stellen Empfänger, Berechtigungen, E-Mail-Schutz, Nachrichtenfluss und öffentliche Ordner in Hybrid- und Cloud-Unternehmensumgebungen bereit und konfigurieren, verwalten, beheben und überwachen diese.
+  Dynamics 365 Business Central Functional Consultants sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen verantwortlich.
+
+  <div><br/><strong>Hinweis&#58; Diese Zertifizierung wird im September 2020 verfügbar sein.</strong></div>
+subTitle: Diese Zertifizierung wird im September 2020 verfügbar sein. Dynamics 365 Business Central Functional Consultants sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen verantwortlich.
 levels:
 - intermediate
 skills:
-- Verwalten organisatorischer Einstellungen und Ressourcen
-- Planen und verwalten der Mail-Architektur
-- Planen und Implementieren einer hybrid Konfiguration und Migration
-- Sichern der Messaging Umgebung
+- Noch nicht verfügbar
 roles:
-- administrator
+- functional-consultant
 type: role-based
 products:
-- m365
-pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHd
-courses:
-- uid: course.ms-203t00
+- business-central
+- power-platform
 exams:
-- uid: exam.ms-203
+- uid: exam.mb-800
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
