--- a/learn-certs-pr/power-apps-and-d365-developer-associate.yml
+++ b/learn-certs-pr/power-apps-and-d365-developer-associate.yml
@@ -2,18 +2,18 @@
 title: 'Microsoft Certified: Power Apps + Dynamics 365 Developer Associate'
 metadata:
   title: 'Microsoft Certified: Power Apps + Dynamics 365 Developer Associate'
-  description: Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von Dynamics 365-Implementierungen verantwortlich. Die Kandidaten implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrung, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen umfassen.
+  description: Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von  Dynamics 365-Implementierungen verantwortlich. Die Kandidaten implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrung, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen umfassen.
 uid: certification.power-apps-and-d365-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
   Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von Dynamics 365-Implementierungen verantwortlich. Die Kandidaten implementieren Komponenten der Lösung, die Anwendungserweiterungen, benutzerdefinierte Benutzererfahrung, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung und benutzerdefinierte Visualisierungen umfassen.
-subTitle: Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von Dynamics 365-Implementierungen verantwortlich.
+subTitle: Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365 arbeiten, sind für Design, Entwicklung, Sicherung und Erweiterung von  Dynamics 365-Implementierungen verantwortlich.
 levels:
 - intermediate
 skills:
-- Durchführung von Erkennung, Planung und Analyse
+- Erkennen von Anforderungen, Analyse und Planung
 - Erstellen und Verwalten des Benutzererlebnisdesigns
 - Verwalten von Entitäten und Daten
 - Sicherheit implementieren
@@ -41,12 +41,11 @@ paths:
 - uid: learn-dynamics.implementing-customer-engagement-online
 - uid: learn-bizapps.automate-process-using-flow
 - uid: learn-bizapps.create-use-analytics-reports-power-bi
-- uid: learn-dynamics.get-started-portals
-- uid: learn-dynamics.work-with-portals
+- uid: learn-bizapps.get-started-power-apps-portals
+- uid: learn-bizapps.extend-power-apps-portals
 - uid: learn-dynamics.introduction-development
 - uid: learn-dynamics.extend-power-platform-model-driven-apps
 - uid: learn-dynamics.extend-power-platform-common-data-service
-- uid: learn-dynamics.extend-portals
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42Fcm
 exams:
 - uid: exam.mb-200
