--- a/learn-certs-pr/power-platform-fundamentals.yml
+++ b/learn-certs-pr/power-platform-fundamentals.yml
@@ -15,9 +15,9 @@ levels:
 skills:
 - Den Geschäftswert der Power-Platform verstehen
 - Identifizieren der Kernkomponenten von Power-Platform
-- Beschreiben Sie den Geschäftswert von Power BI
-- Den Geschäftswert von Power Apps beschreiben
-- Den Geschäftswert von Power-Automate beschreiben
+- Demonstrieren Sie die Funktionen von Power BI
+- Beschreiben Sie die Funktionen von Power Apps
+- Demonstrieren Sie die Funktionen von Power Automate
 - Den Geschäftswert von Power Virtual Agents veranschaulichen
 roles:
 - business-user
