--- a/learn-certs-pr/azure-fundamentals.yml
+++ b/learn-certs-pr/azure-fundamentals.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Azure Fundamentals'
 metadata:
   title: 'Microsoft Certified: Azure Fundamentals'
-  description: 'Azure Fundamentals überprüft das grundlegende Wissen über Cloud-Services und wie diese Services mit Microsoft Azure bereitgestellt werden.'
+  description: Azure Fundamentals überprüft das grundlegende Wissen über Cloud-Services und wie diese Services mit Microsoft Azure bereitgestellt werden.
 uid: certification.azure-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
@@ -43,6 +43,9 @@ resources:
 - title: Azure-Zertifizierungsplakat
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Azure an.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqh
+- title: Reise zur Zertifizierung
+  description: Informieren Sie sich über die nötigen Schritte für eine Zertifizierung in Azure Fundamentals und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AElB
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
