--- a/learn-certs-pr/d365-functional-consultant-customer-service.yml
+++ b/learn-certs-pr/d365-functional-consultant-customer-service.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate'
-  description: 'Microsoft Dynamics 365 Customer Service Functional Consultants schafft CX Lösungen, die schnell und flexibel sind und KI nutzen, um praxisorientierte Einsichten zu liefern, damit Verbraucheranforderungen vorausgesehen werden können.'
+  description: Microsoft Dynamics 365 Customer Service Functional Consultants schafft CX Lösungen, die schnell und flexibel sind und KI nutzen, um praxisorientierte Einsichten zu liefern, damit Verbraucheranforderungen vorausgesehen werden können.
 uid: certification.d365-functional-consultant-customer-service
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
@@ -13,7 +13,7 @@ subTitle: Microsoft Dynamics 365 Customer Service Functional Consultants schafft
 levels:
 - intermediate
 skills:
-- Durchführung von Erkennung, Planung und Analyse
+- Erkennen von Anforderungen, Analyse und Planung
 - Erstellen und Verwalten des Benutzererlebnisdesigns
 - Verwalten von Entitäten und Daten
 - Sicherheit implementieren
@@ -38,8 +38,8 @@ paths:
 - uid: learn-dynamics.implementing-customer-engagement-online
 - uid: learn-bizapps.automate-process-using-flow
 - uid: learn-bizapps.create-use-analytics-reports-power-bi
-- uid: learn-dynamics.get-started-portals
-- uid: learn-dynamics.work-with-portals
+- uid: learn-bizapps.get-started-power-apps-portals
+- uid: learn-bizapps.extend-power-apps-portals
 - uid: learn-bizapps.customer-service-hub-cases-slas
 - uid: learn-bizapps.work-with-entitlements-and-slas-dyn365-customer-service
 - uid: learn-bizapps.work-with-knowledge-management-solutions-dyn365-customer-service
