--- a/learn-certs-pr/d365-functional-consultant-field-service.yml
+++ b/learn-certs-pr/d365-functional-consultant-field-service.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate'
-  description: 'Microsoft Dynamics 365 Field Service Functional Consultants konfigurieren die Field Service-Anwendung, implementieren Lösungen, die den Lebenszyklus des Außendienstes steuern, und setzen die Connected Field Service (IoT)-Lösung ein.'
+  description: Microsoft Dynamics 365 Field Service Functional Consultants konfigurieren die Field Service-Anwendung, implementieren Lösungen, die den Lebenszyklus des Außendienstes steuern, und setzen die Connected Field Service (IoT)-Lösung ein.
 uid: certification.d365-functional-consultant-field-service
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
@@ -35,6 +35,13 @@ courses:
 - uid: course.mb-200t00
 - uid: course.mb-240t00
 paths:
+- uid: learn-bizapps.create-powerapps
+- uid: learn-bizapps.create-app-models-business-processes
+- uid: learn-dynamics.implementing-customer-engagement-online
+- uid: learn-bizapps.automate-process-using-flow
+- uid: learn-bizapps.create-use-analytics-reports-power-bi
+- uid: learn-bizapps.get-started-power-apps-portals
+- uid: learn-bizapps.extend-power-apps-portals
 - uid: learn-bizapps.implementing-dyn365-field-service
 - uid: learn-bizapps.universal-resource-scheduling
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUiZ
