--- a/learn-certs-pr/devops-engineer.yml
+++ b/learn-certs-pr/devops-engineer.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: DevOps Engineer Expert'
 metadata:
   title: 'Microsoft Certified: DevOps Engineer Expert'
-  description: 'Die Experten von Azure DevOps kombinieren Menschen, Prozesse und Technologien, um kontinuierlich wertvolle Produkte und Dienstleistungen bereitzustellen, die den Bedürfnissen der Endverbraucher und den Geschäftszielen entsprechen.'
+  description: Die Experten von Azure DevOps kombinieren Menschen, Prozesse und Technologien, um kontinuierlich wertvolle Produkte und Dienstleistungen bereitzustellen, die den Bedürfnissen der Endverbraucher und den Geschäftszielen entsprechen.
 uid: certification.devops-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
@@ -34,10 +34,12 @@ products:
 - azure-container-instances
 - azure-automation
 paths:
-- uid: learn.azdo.evolve-your-devops-practices
-- uid: learn.azdo.build-applications-with-azure-devops
-- uid: learn.azdo.deploy-applications-with-azure-devops
-- uid: learn.azdo.automate-deployments-azure-devops
+- uid: learn.az-400-develop-instrumentation-strategy
+- uid: learn.az-400-develop-sre-strategy
+- uid: learn.az-400-develop-security-compliance-plan
+- uid: learn.az-400-manage-source-control
+- uid: learn.az-400-facilitate-communication-collaboration
+- uid: learn.az-400-define-implement-continuous-integration
 courses:
 - uid: course.az-400t00
 prerequisites:
